--- a/onlinecourse/templates/onlinecourse/course_list_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_list_bootstrap.html
@@ -1,65 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <meta charset="UTF-8">
-    <title>Online Courses</title>
-</head>
-<body>
-    <!-- Navigation bar -->
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                  <a class="navbar-brand" href="#">Online Course</a>
-            </div>
-            <ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated %}
-                <li>
-                    <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
-                    <a class="btn btn-link" href="{% url 'onlinecourse:logout' %}">Logout</a>
-                </li>
-                {% else %}
-                <li>
-                    <form class="form-inline" action="{% url 'onlinecourse:login' %}" method="post">
-                        {% csrf_token %}
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Username" name="username" >
-                            <input type="password" class="form-control" placeholder="Username" name="psw" >
-                            <button class="btn btn-primary" type="submit">Login</button>
-                            <a class="btn btn-link" href="{% url 'onlinecourse:registration' %}">Sign Up</a>
-                        </div>
-                    </form>
-                </li>
-                {% endif %}
-            </ul>
-        </div>
-    </nav>
+    <head>
+        {% load static %}
+        <link rel="stylesheet"
+              href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <link rel="stylesheet"
+              type="text/css"
+              href="{% static '../static/onlinecourse/course.css' %}">
+        <meta charset="UTF-8">
+        <title>Online Courses</title>
+        <style>
+            body {
+                background-color: #eee8aa;
+            }
 
-    <!-- Page content -->
-    {% if course_list %}
-        <div class="container">
-            <div class="card-deck">
-                {% for course in course_list %}
-                         <div class="card" style="width: 36rem;">
-                          <img class="card-img-left" src="{{MEDIA_URL}}/{{ course.image }}" width="240px" height="240px"
-                               alt="Course image">
-                          <div class="card-body bg-light">
-                              <h5 class="card-title">{{ course.name }}, <span class="text-success">
-                                  {{ course.total_enrollment}} enrolled</span></h5>
-                            <p class="card-text">{{ course.description}}</p>
-                            <form action="{% url 'onlinecourse:enroll' course.id %}" method="post">
-                                  {% csrf_token %}
-                                  <input class="btn btn-primary"  type="submit"
-                                         value="{% if course.is_enrolled %}Enter{% else %}Enroll{% endif %} ">
+            .navbar-brand {
+                font-size: 30px;
+                font-weight: bold;
+                font-color: 
+            }
+
+            .card {
+                align-items: center;
+            }
+
+        </style>
+    </head>
+    <body>
+        <!-- Navigation bar -->
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">DJANGO AND PYTHON</a>
+                </div>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_authenticated %}
+                        <li>
+                            <a class="btn btn-primary" href="#">{{ user.first_name }}({{ user.username }})</a>
+                            <a class="btn btn-primary" href="{% url 'onlinecourse:logout' %}">Logout</a>
+                        </li>
+                    {% else %}
+                        <li>
+                            <form class="form-inline"
+                                  action="{% url 'onlinecourse:login' %}"
+                                  method="post">
+                                {% csrf_token %}
+                                <div class="input-group">
+                                    <input type="text"
+                                           class="form-control"
+                                           placeholder="Username"
+                                           name="username">
+                                    <input type="password"
+                                           class="form-control"
+                                           placeholder="Username"
+                                           name="psw">
+                                    <button class="btn btn-primary" type="submit">Login</button>
+                                    <a class="btn btn-link" href="{% url 'onlinecourse:registration' %}">Sign Up</a>
+                                </div>
                             </form>
-                          </div>
-                        </div>
-                {% endfor %}
+                        </li>
+                    {% endif %}
+                </ul>
             </div>
-        </div>
-    {% else %}
-        <p>No courses are available.</p>
-    {% endif %}
-</body>
+        </nav>
+        <!-- Page content -->
+        {% if course_list %}
+            <div class="container">
+                <div class="card-deck">
+                    {% for course in course_list %}
+                        <div class="card" style="width: 36rem;">
+                            <img class="card-img-left"
+                                 src="{{ MEDIA_URL }}/{{ course.image }}"
+                                 width="240px"
+                                 height="240px"
+                                 alt="Course image">
+                            <div class="card-body bg-light">
+                                <h5 class="card-title">
+                                    {{ course.name }}, <span class="text-success">{{ course.total_enrollment }} enrolled</span>
+                                </h5>
+                                <p class="card-text">{{ course.description }}</p>
+                                <form action="{% url 'onlinecourse:enroll' course.id %}" method="post">
+                                    {% csrf_token %}
+                                    <input class="btn btn-primary"
+                                           type="submit"
+                                           value="{% if course.is_enrolled %}Enroll{% else %}Enroll{% endif %} ">
+                                </form>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+        {% else %}
+            <p>No courses are available.</p>
+        {% endif %}
+    </body>
 </html>
