--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -1,55 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body>
-
- <nav class="navbar navbar-light bg-light">
-    <div class="container-fluid">
-        <div class="navbar-header">
-              <a class="navbar-brand" href="{% url 'onlinecourse:index' %}">Home</a>
-        </div>
-        <ul class="nav navbar-nav navbar-right">
-            {% if user.is_authenticated %}
-            <li>
-                <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
-                <a class="btn btn-link" href="{% url 'onlinecourse:logout' %}">Logout</a>
-            </li>
+    <head>
+        <meta charset="UTF-8">
+        {% load static %}
+        <link rel="stylesheet"
+              href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="{% static '../static/onlinecourse/course.css' %}">
+    </head>
+    <body>
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="{% url 'onlinecourse:index' %}">Home</a>
+                </div>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_authenticated %}
+                        <li>
+                            <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
+                            <a class="btn btn-link" href="{% url 'onlinecourse:logout' %}">Logout</a>
+                        </li>
+                    {% else %}
+                        <li>
+                            <form class="form-inline"
+                                  action="{% url 'onlinecourse:login' %}"
+                                  method="post">
+                                {% csrf_token %}
+                                <div class="input-group">
+                                    <input type="text"
+                                           class="form-control"
+                                           placeholder="Username"
+                                           name="username">
+                                    <input type="password"
+                                           class="form-control"
+                                           placeholder="Username"
+                                           name="psw">
+                                    <button class="btn btn-primary" type="submit">Login</button>
+                                    <a class="btn btn-link" href="{% url 'onlinecourse:registration' %}">Sign Up</a>
+                                </div>
+                            </form>
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
+        <div class="container-fluid">
+            {% if total_score > 80 %}
+            <div class="alert alert-success" style="justify-content: center">
+                <p><strong>Congratulations, {{ user.first_name }}!</strong> You have passed the exam and completed the course with score {{ total_score }}/100</p>
+            </div>
             {% else %}
-            <li>
-                <form class="form-inline" action="{% url 'onlinecourse:login' %}" method="post">
-                    {% csrf_token %}
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Username" name="username" >
-                        <input type="password" class="form-control" placeholder="Username" name="psw" >
-                        <button class="btn btn-primary" type="submit">Login</button>
-                        <a class="btn btn-link" href="{% url 'onlinecourse:registration' %}">Sign Up</a>
-                    </div>
-                </form>
-            </li>
+                <div class="alert alert-danger" style="justify-content: center">
+                    <p><strong>Failed Sorry {{ user.first_name }}!</strong> You have failed the exam with score {{ total_score }}/100</p>
+                </div>
+                <a class="btn btn-link text-danger"
+                   href="{% url 'onlinecourse:course_details' course.id %}">Retake</a>
             {% endif %}
-        </ul>
-    </div>
-</nav>
-
-<div class="container-fluid">
-    {% if grade > 80 %}
-    <div class="alert alert-success">
-       <!--HINT Display passed info -->
-    </div>
-        {% else %}
-        <div class="alert alert-danger">
-            <!--HINT Display failed info -->
+            <div class="card-columns-vertical mt-1">
+                <h5 class="exam-results">Exam results</h5>
+                <!--HINT Display exam results-->
+                {% for question in course.question_set.all %}
+                    <div class="card">
+                        <div class="card-header border-light">
+                            <h5>{{ question.question_text }}</h5>
+                        </div>
+                        <div class="card-body">
+                            {% for choice in question.choice_set.all %}
+                                {% if choice.is_correct and choice in choices %}
+                                    <p class="card-text text-success">Correct answer: {{ choice.choice_text }}</p>
+                                {% elif choice.is_correct and choice not in choices %}
+                                    <p class="card-text text-warning">Not selected: {{ choice.choice_text }}</p>
+                                {% elif choice.is_correct == False and choice in choices %}
+                                    <p class="card-text text-danger">Wrong answer: {{ choice.choice_text }}</p>
+                                {% else %}
+                                    <p class="card-text">{{ choice.choice_text }}</p>
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                    </div>
+                {% endfor %}
+                {% comment %} <div class="card-columns-vertical">
+                    {% for questions in questioners %}
+                        <div class="card mt-1">
+                            <div class="card-header">
+                                <h5>Question {{ forloop.counter }}: {{ questions.question_text }}</h5>
+                            </div>
+                            {% for choices in choices %}
+                                {% if questions.id == choices.question_id %}
+                                    <div class="form-group">
+                                        <div class="form-check">
+                                            {% for item in question_results %}
+                                                {% if item.selected_choice == choices.choice_text and item.is_correct %}
+                                                    <label class="form-check-label" style="color:green">Correct answer: {{ choices.choice_text }}</label>
+                                                {% elif item.selected_choice != choices.choice_text and item.is_correct %}
+                                                    <label class="form-check-label" style="color:orange">Not selected: {{ choices.choice_text }}</label>
+                                                {% elif item.selected_choice == choices.choice_text and not item.is_correct %}
+                                                    <label class="form-check-label" style="color:red">Wrong answer: {{ choices.choice_text }}</label>
+                                                {% else %}
+                                                    <label class="form-check-label">{{ choices.choice_text }}</label>
+                                                {% endif %}
+                                            {% endfor %}
+                                        </div>
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
+                        {% endfor %}
+                    </div>
+                </div> {% endcomment %}
+            </div>
         </div>
-        <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
-        {% endif %}
-        <div class="card-columns-vertical mt-1">
-        <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
-        </div>
-    </div>
-</body>
+    </body>
 </html>
