--- a/onlinecourse/templates/onlinecourse/user_registration_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/user_registration_bootstrap.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     {% load static %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static '../static/onlinecourse/course.css' %}">
 </head>
 <body>
 
@@ -62,3 +63,4 @@
     </form>
 
 </body>
+</html>
